tests/whiley/valid/test_236.wyal
define f_requires_0(int[] xs) is:
    |xs| == 0


assert "precondition not satisfied":
    if:
        true
    then:
        f_requires_0([0;0])


