tests/whiley/invalid/test_30.wyal
define f_requires_0(int[] xs) is:
    xs != [0;0]


assert "precondition not satisfied":
    if:
        true
    then:
        f_requires_0([0;0])


